fix(portal-next): Formatting for API details card in Portal-Next is misaligned

--- a/gravitee-apim-portal-webui-next/src/app/api/api-details/api-tab-details/api-tab-details.component.scss
+++ b/gravitee-apim-portal-webui-next/src/app/api/api-details/api-tab-details/api-tab-details.component.scss
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 @use '../../../../scss/m3-adapter';
+@use '../../../../scss/theme';
 
 .api-details {
   &__tab {
@@ -37,4 +38,8 @@
       gap: 32px;
     }
   }
+}
+
+.api-info-value {
+  color: theme.$paragraph-color;
 }
